--- a/app/src/main/res/layout/activity_score_screen.xml
+++ b/app/src/main/res/layout/activity_score_screen.xml
@@ -4,10 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E91E63"
     tools:context=".ScoreScreen">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/scoreText"
+            android:layout_width="262dp"
+            android:layout_height="42dp"
+            android:text="SCORE" />
+
+        <ImageView
+            android:id="@+id/testScore"
+            android:layout_width="match_parent"
+            android:layout_height="510dp"
+            app:srcCompat="@drawable/logo_thinknsay" />
+
+        <ImageButton
+            android:id="@+id/next_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/forward" />
+    </LinearLayout>
 </RelativeLayout>
