--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,75 +7,58 @@
     android:background="#D8E91E63"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <ImageView
+        android:id="@+id/logo_game"
+        android:layout_width="363dp"
+        android:layout_height="361dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginBottom="346dp"
+        app:srcCompat="@drawable/logo_thinknsay" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="352dp"
-            app:srcCompat="@drawable/logo_thinknsay" />
+    <Button
+        android:id="@+id/start_button"
+        android:layout_width="211dp"
+        android:layout_height="75dp"
+        android:layout_above="@+id/score_button"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="101dp"
+        android:layout_marginLeft="101dp"
+        android:layout_marginTop="418dp"
+        android:layout_marginEnd="99dp"
+        android:layout_marginRight="99dp"
+        android:layout_marginBottom="50dp"
+        android:text="START"
+        android:textSize="24sp" />
 
-        <LinearLayout
-            android:layout_width="421dp"
-            android:layout_height="73dp"
-            android:orientation="horizontal">
+    <Button
+        android:id="@+id/score_button"
+        android:layout_width="211dp"
+        android:layout_height="73dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="102dp"
+        android:layout_marginLeft="102dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginRight="98dp"
+        android:layout_marginBottom="115dp"
+        android:text="SCORE"
+        android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/spaceBarTextLf"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:visibility="invisible" />
-
-            <Button
-                android:id="@+id/start_button"
-                android:layout_width="211dp"
-                android:layout_height="75dp"
-                android:text="START" />
-
-            <TextView
-                android:id="@+id/spaceBarTextRt"
-                android:layout_width="89dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:visibility="invisible" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:text="TextView"
-            android:visibility="invisible" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/spaceBarTextLf2"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:visibility="invisible" />
-
-            <Button
-                android:id="@+id/score_button"
-                android:layout_width="211dp"
-                android:layout_height="73dp"
-                android:text="SCORE" />
-
-            <TextView
-                android:id="@+id/spaceBarTextRt2"
-                android:layout_width="89dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:visibility="invisible" />
-        </LinearLayout>
-
-    </LinearLayout>
 </RelativeLayout>
