--- a/app/src/main/res/layout/activity_score_screen.xml
+++ b/app/src/main/res/layout/activity_score_screen.xml
@@ -7,27 +7,54 @@
     android:background="#E91E63"
     tools:context=".ScoreScreen">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/scoreText"
+        android:layout_width="wrap_content"
+        android:layout_height="62dp"
+        android:layout_above="@+id/score_view"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="122dp"
+        android:layout_marginLeft="122dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginRight="124dp"
+        android:layout_marginBottom="8dp"
+        android:text="SCORE"
+        android:textSize="50dp" />
+
+    <TextView
+        android:id="@+id/score_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="507dp"
+        android:layout_above="@+id/next_button"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="-1dp"
+        android:text="TextView" />
 
-        <TextView
-            android:id="@+id/scoreText"
-            android:layout_width="262dp"
-            android:layout_height="42dp"
-            android:text="SCORE" />
-
-        <ImageView
-            android:id="@+id/testScore"
-            android:layout_width="match_parent"
-            android:layout_height="510dp"
-            app:srcCompat="@drawable/logo_thinknsay" />
-
-        <ImageButton
-            android:id="@+id/next_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/forward" />
-    </LinearLayout>
+    <ImageButton
+        android:id="@+id/next_button"
+        android:layout_width="243dp"
+        android:layout_height="135dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="97dp"
+        android:layout_marginLeft="97dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp"
+        android:layout_marginBottom="7dp"
+        app:srcCompat="@drawable/forward" />
 </RelativeLayout>
